--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-otgw",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A node for node-red which communicates with the ITGW",
   "main": "cul.js",
   "scripts": {
@@ -27,6 +27,6 @@
   },
   "homepage": "https://github.com/1stsetup/node-red-contrib-otgw#readme",
   "dependencies": {
-    "@1st-setup/openthermgateway": "latest"
+    "@1st-setup/openthermgateway": "0.0.17"
   }
 }
