--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-red-contrib-otgw",
-  "version": "0.0.3",
-  "description": "A node for node-red which communicates with the ITGW",
+  "version": "0.0.4",
+  "description": "A node for node-red which communicates with the OTGW",
   "main": "cul.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
